--- a/website.html
+++ b/website.html
@@ -72,8 +72,11 @@
 
 <section id=" numbers">
   <div class=" container">
-  <div class=" left-column">
     <div class="numbers-text">
+    <!--<div id ="right-column">
+    <img src="breast3.jpg">
+ </div>-->
+ <div class=" left-column">
      <h1> Numbers and Facts </h1>
      <br>
      <span class="square"></span>
@@ -87,17 +90,74 @@
      <div class="line"> 
       <span class="l-1"></span><br>
       <span class="l-2"></span><br>
-      <span class="l-3"></span>
+      <span class="l-3"></span> <br>
     </div>
     </div>
   </div>
   </div>
-  <div id ="right-column">
-    <img src="breast3.jpg">
-</div>
-
 </section>
 
+<section id = "contact">
+  <div class= " contact-row">
+    <div class= " contact-left">
+      <div class = "contact-right">
+        <img src= "contact.jpg">
+      </div>
+      <h1 class="red"> Sign up to be join the cause.</h1>
+      <form>
+        <input type="text" placeholder=" Enter Name">
+        <input type="email" placeholder=" Enter Email">
+        <input type="password" placeholder=" Enter Password">
+      <div class="btn-box">
+        <button class="common-btn"> Register Now</button>
+        <button class="common-btn"> Login</button>
+      </div>
+      <br>
+      <div class="line"> 
+       <span class="l-1"></span><br>
+       <span class="l-2"></span><br>
+       <span class="l-3"></span> <br>
+     </div>
+      </form>
+    </div>
+  </div>
+</section>
+
+
+<section id="footer">
+  <div class="containern footer-row">
+    <hr>
+    <div class="footer-left">
+      <div class="footer-link">
+        <div class="link-title">
+          <h4> Support</h4>
+          <small> Donation</small>
+          <small> Charity</small>
+        </div>
+        <div class="link-title">
+          <h4> About Us</h4>
+          <small> FAQs</small>
+        </div>
+        <div class="link-title">
+          <h4> Our Plan</h4>
+          <small> Check it out</small>
+        </div>
+      </div>
+    </div>
+    <div class="footer-right">
+      <div class="footer-form">
+        <div class="copyright">
+          <small>sella@reina.com</small>
+          <small> copyright 2020 Reina</small>
+        </div>
+        <div class="footer-logo">
+          <img src="menu.png">
+          <button class="common-btn">English</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
  <script>
   var menuBtn = document.getElementById("menuBtn");
   var sideNav = document.getElementById("menuBtn");
